nivasa-macros/tests/trybuild/module_set_metadata_missing_value.stderr
error: `#[set_metadata]` requires a `value` entry
 --> tests/trybuild/module_set_metadata_missing_value.rs:4:1
  |
4 | #[set_metadata(key = "tenant")]
  | ^

warning: unused import: `set_metadata`
 --> tests/trybuild/module_set_metadata_missing_value.rs:1:29
  |
1 | use nivasa_macros::{module, set_metadata};
  |                             ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
