nivasa-macros/tests/trybuild/module_set_metadata_missing_value.rs
use nivasa_macros::{module, set_metadata};

#[module({})]
#[set_metadata(key = "tenant")]
struct AppModule;

fn main() {}
